--- a/challege-front/package.json
+++ b/challege-front/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-credit-cards": "^0.7.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
