--- a/challege-front/package.json
+++ b/challege-front/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "bootstrap": "^4.3.1",
         "firebase": "^6.2.4",
+        "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-bootstrap": "^1.0.0-beta.9",
         "react-credit-cards": "^0.7.0",
