--- a/challege-front/package.json
+++ b/challege-front/package.json
@@ -3,6 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@devexpress/dx-react-chart": "^1.11.1",
+        "@devexpress/dx-react-chart-bootstrap4": "^1.11.1",
+        "@devexpress/dx-react-chart-material-ui": "^1.11.1",
+        "@devexpress/dx-react-core": "^1.11.1",
+        "@material-ui/core": "^4.1.3",
         "bootstrap": "^4.3.1",
         "firebase": "^6.2.4",
         "prop-types": "^15.7.2",
@@ -13,6 +18,7 @@
         "react-redux": "^7.1.0",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
+        "recharts": "^1.6.2",
         "redux": "^4.0.1",
         "redux-persist": "^5.10.0"
     },
