--- a/challege-front/package.json
+++ b/challege-front/package.json
@@ -14,6 +14,7 @@
         "react-redux": "^7.1.0",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
+        "react-test-renderer": "^16.8.6",
         "recharts": "^1.6.2",
         "redux": "^4.0.1",
         "redux-persist": "^5.10.0"
